--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,24 @@
-SECRET_KEY=your-secret-key-here
-DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1,.railway.app
+# Django Settings
+SECRET_KEY=your-secret-key-here-change-in-production
+DEBUG=False
+ENVIRONMENT=production
+ALLOWED_HOSTS=yourdomain.railway.app,*.railway.app
 
-# Database
-DATABASE_URL=postgresql://user:password@localhost:5432/invoice_db
+# Database (Railway provides DATABASE_URL automatically)
+# DATABASE_URL=postgresql://user:password@host:port/dbname
 
-# Email Configuration (for password reset)
-EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+# Timezone
+TIME_ZONE=UTC
+
+# Email Configuration (Optional)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=your-app-password
 
-# Railway deployment
-RAILWAY_ENVIRONMENT=production
+# Security Settings (for production)
+SECURE_SSL_REDIRECT=True
+
+# Django Log Level
+DJANGO_LOG_LEVEL=INFO
